# soccer-sim

./: CMakeLists.txt  README.md  calibrate.c  calibrate.h  control.c  listener.cpp  listener.cpp.backup2  motorControl.cpp  motorControl.h  package.xml  play.c  play.h  serialTester.py  skill.c  skill.h  strategy.c  strategy.h  talker.cpp  utility.c  utility.h  vision.h  xdo_launch
Robot/: calibrate.h  control.h  skill.h  strategy.h  tester.cpp
cad/: field - simple with goal fixed and solidified.blend1  field - simple with goal fixed.blend1  field - simple with goal fixed2.blend  field - simple with normals outward.blend  field - solidified to have thickness with normals outward.blend
config/: walle_control.yaml
launch/: ball.launch  robot.launch  sim.launch  soccer.launch  test.launch  walle_control.launch  world.launch
meshes/: field6.dae
models/camera/: model.config  model.sdf
models/field/: model.config  model.sdf
models/field/meshes/: field5.dae  field7.dae  field8.dae
msg/: Num.msg
plugins/: model_push.cc  soccer_ball.cpp  soccer_drive.cpp
src/: home.cpp  motorControl.cpp  motorControl.h  vision.cpp
src/Robot/: calibrate.c  control.c  listener.cpp  motorControl.cpp  motorControl.h  play.c  strategy.c
src/Vision/: talker.cpp  vision.h
urdf/: ball.sdf  ball.xacro  camera2.sdf  field.sdf  robot.xacro  soccer.sdf  soccer.xacro  wheel.xacro
worlds/: empty.world.xacro  empty_world.xacro  soccer_field.world  soccer_field.world.xacro  soccer_field.xacro
